bk_ida/gobmkida/c0/play_solo
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/play_solo/src/interface/play_solo.c:568:12: error: use of undeclared identifier 'QueuePage'
move_val = QueuePage::QueuePage( &i, &j, gameinfoa->to_move); 
           ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/play_solo/src/interface/play_solo.c:598:1: error: use of undeclared identifier 'qToBigEndian'
qToBigEndian<unsigned int>( 0, stdout); 
^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/play_solo/src/interface/play_solo.c:598:14: error: expected expression
qToBigEndian<unsigned int>( 0, stdout); 
             ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/play_solo/src/interface/play_solo.c:599:9: error: use of undeclared identifier 'QQmlJS'
score = QQmlJS::Managed::operator new( &lower_bound, &upper_bound); 
        ^
4 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/play_solo/src/obj/2/play_solo.o] Error 1
